# chess

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: main.rs
static/: index.html  print.html  solve.html
